Added callback details

--- a/docs/draft-wip/yaml/dci-crvs.v.1.0.0-async.yaml
+++ b/docs/draft-wip/yaml/dci-crvs.v.1.0.0-async.yaml
@@ -437,6 +437,8 @@ components:
             - $ref: './headers.yaml#/components/schemas/SearchAction'
             - $ref: './headers.yaml#/components/schemas/TotalCountHeader'
             - $ref: './headers.yaml#/components/schemas/EncHeaders'
+            - $ref: './headers.yaml#/components/schemas/AsyncHeaders'      
+            - $ref: './headers.yaml#/components/schemas/SearchCallbackHeader' 
         message:
           type: object
           description: 'The search data using which search to be performed'
