--- a/docs/draft-wip/yaml/search.yaml
+++ b/docs/draft-wip/yaml/search.yaml
@@ -21,7 +21,7 @@ components:
         birthdate:
           type: string
           example: ''
-        place_of_birth:
+        birthplace:
           type: string
           example: ''
         status:
