--- a/docs/draft/yaml/dci-crvs.v.1.0.0-sync.yaml
+++ b/docs/draft/yaml/dci-crvs.v.1.0.0-sync.yaml
@@ -276,7 +276,7 @@ paths:
     post:
       tags:
         - Request status
-      summary: ''
+      summary: 'Request status: /status'
       description: ''
       operationId: ''
       parameters:
