--- a/docs/draft-wip/yaml/dci-crvs.v.1.0.0-async.yaml
+++ b/docs/draft-wip/yaml/dci-crvs.v.1.0.0-async.yaml
@@ -319,7 +319,7 @@ paths:
     post:
       tags:
         - Request status
-      summary: ''
+      summary: 'Request status: /status'
       description: ''
       operationId: ''
       parameters:
@@ -371,7 +371,7 @@ paths:
     post:
       tags:
         - Request status
-      summary: ''
+      summary: 'Request status: /on-status'
       description: ''
       operationId: ''
       parameters:
