--- a/docs/draft/yaml/dci-crvs.v.1.0.0.yaml
+++ b/docs/draft/yaml/dci-crvs.v.1.0.0.yaml
@@ -322,7 +322,7 @@ paths:
     post:
       tags:
         - Request status
-      summary: ''
+      summary: 'Request status: /status'
       description: ''
       operationId: ''
       parameters:
@@ -374,7 +374,7 @@ paths:
     post:
       tags:
         - Request status
-      summary: ''
+      summary: 'Request status: /on-status'
       description: ''
       operationId: ''
       parameters:
